fixed z-indexes

--- a/src/stylesheets/webpage-state-gameplay.css
+++ b/src/stylesheets/webpage-state-gameplay.css
@@ -18,6 +18,7 @@
 }
 
 #accuracy-container {
+	z-index: 100;
 	position: absolute;
 	top: 5vh;
 }
@@ -52,5 +53,5 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	z-index: 100;
+	z-index: 10;
 }
